2008-09-11  Matthias Clasen  <mclasen@redhat.com>

	Merged from trunk:

	Bug 545875 – evo crashed when trying to print pages 6-7 of a 1 page
	email

	* gtk/gtkprintoperation.c: Clamp page ranges to correct ranges.
	Patch by Marek Kasik

2008-09-11  Matthias Clasen  <mclasen@redhat.com>

	Merged from trunk:

	Bug 543545 – GtkAssistant crashes when gtk_widget_hide() is called
	inside "apply" signal handler

	* gtk/gtkassistant.c: Don't emit signals with extra parameters.
	Patch by Antti Kaijanmäki

2008-09-11  Matthias Clasen  <mclasen@redhat.com>

	Merged from trunk:

	Bug 542523 - GtkTextTag should handle setting properties to NULL

	* gtk/gtktexttag.c (gtk_text_tag_set_property): Unset the color when
	setting it to NULL instead of displaying a warning.
	Patch by Xavier Claessens

2008-09-11  Matthias Clasen  <mclasen@redhat.com>

	Merged from trunk:

	Bug 479780 – Bookmarks in left pane of FileChooser cannot be renamed

	* gtk/gtkfilechooserdefault.c (shortcuts_build_popup_menu):
	Call shortcuts_check_popup_sensitivity() every time the
	menu is popped up. Problem reported by Hong Jen Yee

2008-09-11  Matthias Clasen  <mclasen@redhat.com>

	Merged from trunk:

	* gtk/gtkfilechooserbutton.c (update_label_and_image): Unset
	the image when the label is set to "(None)". Reported by
	Neil Roberts

2008-09-11  Matthias Clasen  <mclasen@redhat.com>

	Merged from trunk:

	* gtk/gtkuimanager.c (update_node): Skip update of accelerator 
	child node if it has no associated action. Fixes #541950.
	Patch by Christian Neumair

2008-09-11  Matthias Clasen  <mclasen@redhat.com>

	Merged from trunk:

	Bug 528845 – segv from GtkBuilder on attempting <accelerator> under
	GtkCellView

	* gtk/gtkcellview.c: Don't blindly chain up in the buildable
	implementation.  Reported by Kevin Ryde.

2008-09-11  Matthias Clasen  <mclasen@redhat.com>

	Merged from trunk:

	Bug 541645 – gtkfilechooserdefault segfaults when bookmark does not
	contain ://
